--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>RabbitOnBlow</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>
+		  Steffen Baumgarten
+		</title>
+	</head>
+	<body>
+		<img src="http://i1061.photobucket.com/albums/t480/ericqweinstein/f3a16fb6.jpg" />
+        <img src="http://i1061.photobucket.com/albums/
+t480/ericqweinstein/ninja_zpsa5dbe37a.jpg"/>
+	</body>
+</html>
