Added page 2 - Würstchen-Offer

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 		</title>
 	</head>
 	<body>
+		<h1>hans</h1>
 		<img src="http://i1061.photobucket.com/albums/t480/ericqweinstein/f3a16fb6.jpg" />
         <img src="http://i1061.photobucket.com/albums/
 t480/ericqweinstein/ninja_zpsa5dbe37a.jpg"/>
+<a href="page2.html">page2</a>
+<h1> gfdgf</h1>
+
 	</body>
 </html>
